feat: add title

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>devgen</title>
+    <title>devgen: chat with your github repository side by side</title>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
   </head>
   <body>
